--- a/config/database.yml
+++ b/config/database.yml
@@ -3,12 +3,11 @@ default: &default
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password: aaa
   socket: /tmp/mysql.sock
 
 development:
   <<: *default
-  database: escola_development
+  database: escola
 
 test:
   <<: *default
